--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
     justify-content: space-around;
     height: 100vh;
     align-items: center;
+    gap: 5px;
 }
 
 #action-bt {
@@ -46,8 +47,23 @@
     width: 120%;
     font-size: 10px;
 }
-.card{margin-top:20px}
+
 .form-control {
     transition: none;
-    min-width: 500px;
+
+}
+
+#btn_login {
+    margin-right: 5px;
+}
+
+.card-body-register {
+    padding-top: 84.9px;
+    padding-bottom: 65px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.reg-btn {
+    margin: 5px;
 }
